Add annotator endpoint dependency
