# clients/openapi.json
@@ -738,6 +738,16 @@
               "type": "string",
               "title": "Study Uuid"
             }
+          },
+          {
+            "name": "apply_annotations",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Apply Annotations"
+            }
           }
         ],
         "responses": {
@@ -1463,6 +1473,26 @@
       },
       "BIAImage": {
         "properties": {
+          "attributes": {
+            "type": "object",
+            "title": "Attributes",
+            "description": "\n        When annotations are applied, the ones that have a key different than an object attribute (so they don't overwrite it) get saved here.\n    ",
+            "default": {}
+          },
+          "annotations_applied": {
+            "type": "boolean",
+            "title": "Annotations Applied",
+            "description": "\n        This acts as a dirty flag, with the purpose of telling apart objects that had some fields overwritten by applying annotations (so should be rejected when writing), and those that didn't.\n    ",
+            "default": false
+          },
+          "annotations": {
+            "items": {
+              "$ref": "#/components/schemas/ImageAnnotation"
+            },
+            "type": "array",
+            "title": "Annotations",
+            "default": []
+          },
           "uuid": {
             "type": "string",
             "format": "uuid",
@@ -1519,19 +1549,6 @@
             },
             "type": "array",
             "title": "Representations",
-            "default": []
-          },
-          "attributes": {
-            "type": "object",
-            "title": "Attributes",
-            "default": {}
-          },
-          "annotations": {
-            "items": {
-              "$ref": "#/components/schemas/ImageAnnotation"
-            },
-            "type": "array",
-            "title": "Annotations",
             "default": []
           },
           "alias": {
@@ -1676,11 +1693,13 @@
           "attributes": {
             "type": "object",
             "title": "Attributes",
+            "description": "\n        When annotations are applied, the ones that have a key different than an object attribute (so they don't overwrite it) get saved here.\n    ",
             "default": {}
           },
           "annotations_applied": {
             "type": "boolean",
             "title": "Annotations Applied",
+            "description": "\n        This acts as a dirty flag, with the purpose of telling apart objects that had some fields overwritten by applying annotations (so should be rejected when writing), and those that didn't.\n    ",
             "default": false
           },
           "annotations": {
@@ -1992,6 +2011,26 @@
       },
       "FileReference": {
         "properties": {
+          "attributes": {
+            "type": "object",
+            "title": "Attributes",
+            "description": "\n        When annotations are applied, the ones that have a key different than an object attribute (so they don't overwrite it) get saved here.\n    ",
+            "default": {}
+          },
+          "annotations_applied": {
+            "type": "boolean",
+            "title": "Annotations Applied",
+            "description": "\n        This acts as a dirty flag, with the purpose of telling apart objects that had some fields overwritten by applying annotations (so should be rejected when writing), and those that didn't.\n    ",
+            "default": false
+          },
+          "annotations": {
+            "items": {
+              "$ref": "#/components/schemas/FileReferenceAnnotation"
+            },
+            "type": "array",
+            "title": "Annotations",
+            "default": []
+          },
           "uuid": {
             "type": "string",
             "format": "uuid",
@@ -2031,19 +2070,6 @@
           "size_in_bytes": {
             "type": "integer",
             "title": "Size In Bytes"
-          },
-          "attributes": {
-            "type": "object",
-            "title": "Attributes",
-            "default": {}
-          },
-          "annotations": {
-            "items": {
-              "$ref": "#/components/schemas/FileReferenceAnnotation"
-            },
-            "type": "array",
-            "title": "Annotations",
-            "default": []
           }
         },
         "additionalProperties": false,
